--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
@@ -8,7 +8,7 @@
 \author{\ALL}
 \supervisor{\ALL}
 \uso{esterno}
-\dest{Prof. Tullio Vardanega, Zucchetti S.P.A.}
+\dest{Prof. Vardanega, \ZU}
 \title{Analisi dei Requisiti}
 \date{9 gennaio 2017}
 
@@ -67,8 +67,8 @@
 \section{Introduzione}
 	\subsection{Scopo del documento}
 	Questo documento ha lo scopo di elencare, classificare e tracciare i requisiti del prodotto \proj{} come identificati dal gruppo \hx{}. 
-	\\L'individuazione di tali requisiti si è svolta dapprima tramite l'analisi del relativo capitolato d'appalto e successivamente attraverso una serie di incontri interni al team ed esterni alla presenza del proponente.
-	\\Con tale documento il gruppo \hx{} si impegna a sviluppare un prodotto con implementate le caratteristiche di seguito elencate.
+	\\L'individuazione di tali requisiti si è svolta dapprima tramite l'analisi del relativo capitolato d'appalto e successivamente attraverso una serie di incontri, sia interni al team che in presenza del committente.
+	\\Con tale documento il gruppo \hx{} si impegna a sviluppare un prodotto che implementa le caratteristiche di seguito elencate.
 
 	\subsection{Scopo del prodotto}
 	\scopo{}
@@ -80,7 +80,7 @@
 		\subsubsection{Normativi}
 		\begin{itemize}
 			\item \emph{\NdP};
-			\item \textbf{Capitolato d'Appalto C6: \proj}:
+			\item \textbf{Capitolato d'appalto C6: \proj}:
 			\\ \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6p.pdf};
 		\end{itemize}
 		
@@ -103,7 +103,7 @@
 	In dettaglio, all'interno di \proj{}, sarà possibile:
 	\begin{itemize}
 	\item Definire un diagramma delle classi;
-	\item Definire i diagrammi di attività, con alcune modifiche rispetto allo standard, dei metodi descritti nel diagramma delle attività;
+	\item Definire i diagrammi delle attività, con alcune modifiche rispetto allo standard, dei metodi descritti nel diagramma delle attività;
 	\item Generare in modo automatico del codice che potrà, qualora l'utente abbia correttamente progettato la sua applicazione, essere compilato ed eseguito senza alcuna modifica.
 	\item Salvare e caricare successivamente il proprio progetto sviluppato con \proj.
 	\end{itemize}
@@ -1965,7 +1965,7 @@ l'attore espande il blocco for mostrandone il corpo.
 \label{UC5.19}
 \begin{itemize}
 \item \textbf{Attori}: Utente;
-\item \textbf{Descrizione}: l'attore può spostare uno dei qualsiasi blocchi già inseriti modificandone la posizione all'interno del diagramma di attività correntemente gestito;	
+\item \textbf{Descrizione}: l'attore può spostare uno dei qualsiasi blocchi già inseriti modificandone la posizione all'interno del diagramma delle attività correntemente gestito;	
 \item \textbf{Precondizione}: il sistema visualizza il diagramma delle attività correntemente gestito dall'attore ed in particolare il blocco che sarà selezionato per lo spostamento;	
 \item \textbf{Postcondizione}: il sistema visualizza il blocco for nella nuova posizione specificata dall'utente;	
 \item \textbf{Scenario principale}:
@@ -4482,7 +4482,7 @@ Di Vincolo & 7 & 2 & 0\\ \hline
 
 Riportiamo un esempio d'uso della nostra applicazione --- in prima persona, affinché lo stile sia più scorrevole.
 
-Questo appendice \textbf{non costituisce del testo vincolante}: esso è fornito allo scopo di riassumere i casi d'uso esplicitati nelle sezioni precedenti e fornire una visione di massima del \textbf{possibile} prodotto finale. Non si vuole suggerire in \textbf{alcun modo} la possibile implementazione futura, che può discostare dall'esempio descritto.
+Questa appendice \textbf{non costituisce del testo vincolante}: essa è fornita allo scopo di riassumere i casi d'uso esplicitati nelle sezioni precedenti e fornire una visione di massima del \textbf{possibile} prodotto finale. Non si vuole suggerire \textbf{in alcun modo} la possibile implementazione futura, che può discostarsi dall'esempio descritto.
 
 Un approccio simile si è rivelato utile allo scopo di chiarire i requisiti del cliente in fase di riunione; si riporta quindi il testo discusso con il committente durante un incontro.
 
