--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
@@ -157,7 +157,7 @@ Il presente documento si divide in tre sezioni principali:
 	% \begin{itemize}
 		% \item \gloss{Diagramma delle classi}: descrive i tipi di entità(classi) e le relazioni tra loro.
 		% \item Diagramma dei package: raggruppa un numero di elementi \gloss{UML} in una sola unità di livello più alto.
-		% \item \gloss{Diagramma di attività}: descrive in dettaglio un algoritmo
+		% \item \gloss{Diagramma delle attività}: descrive in dettaglio un algoritmo
 		% \item Diagramma di sequenza: descrive uno \gloss{scenario}, dove le azioni sono disposte in sequenza e le varie scelte sono già state prese.
 	% \end{itemize}
 	\subsubsection{Codifica} \label{sec:cod}
