--- a/doc/Esterni/Verbali/Verbali.tex
+++ b/doc/Esterni/Verbali/Verbali.tex
@@ -159,6 +159,6 @@ Durante la riunione sono stati esposti i progressi sulla documentazione da tutti
 % 	\item[Partecipanti] \GP, \LB, \GG, \MM.
 % \end{description}
 
-% Abbiamo presentato al \GP un breve esempio (nella forma di un caso d'uso del sistema), in cui un utente crea un nuovo progetto con la nostra applicazione e si interfaccia con il \gloss{diagramma delle classi} e il \gloss{diagramma di attività}.
+% Abbiamo presentato al \GP un breve esempio (nella forma di un caso d'uso del sistema), in cui un utente crea un nuovo progetto con la nostra applicazione e si interfaccia con il \gloss{diagramma delle classi} e il \gloss{diagramma delle attività}.
 
 \end{document}
