--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
@@ -96,16 +96,16 @@
 
 \section{Descrizione generale}
 	\subsection{Obiettivo del prodotto}
-	Il prodotto sviluppato  ha come scopo primario quello di fornire un editor in grado di supportare e guidare l'utente nella progettazione e nella codifica dell'applicativo desiderato e generare codice eseguibile sulla base delle informazioni contenute nei diagrammi realizzati. 
+	Il prodotto sviluppato ha come scopo primario quello di fornire un editor in grado di supportare e guidare l'utente nella progettazione e nella codifica dell'applicativo desiderato e generare codice eseguibile sulla base delle informazioni contenute nei diagrammi realizzati. 
 	\\In particolare, il software risulterà orientato alla realizzazione di programmi appartenenti ad uno specifico dominio applicativo, quello dei giochi da tavolo.
 	\subsection{Funzioni del prodotto}
 	%Il progetto sviluppato consiste nella creazione di un applicativo web che possa permettere la creazione di svariati software di un determinato dominio applicativo (i giochi da tavolo). 
-	In dettaglio, all'interno di \proj{}, sarà possibile:
+	In dettaglio, all'interno di \proj{} sarà possibile:
 	\begin{itemize}
-	\item Definire un diagramma delle classi;
-	\item Definire i diagrammi delle attività, con alcune modifiche rispetto allo standard, dei metodi descritti nel diagramma delle attività;
-	\item Generare in modo automatico del codice che potrà, qualora l'utente abbia correttamente progettato la sua applicazione, essere compilato ed eseguito senza alcuna modifica.
-	\item Salvare e caricare successivamente il proprio progetto sviluppato con \proj.
+	\item definire un diagramma delle classi;
+	\item definire i \gloss{diagrammi delle attività} (con alcune modifiche rispetto al diagramma standard) dei metodi descritti nel \gloss{diagramma delle classi};
+	\item generare in modo automatico del codice che potrà, qualora l'utente abbia correttamente progettato la sua applicazione, essere compilato ed eseguito senza bisogno di apportare alcuna modifica a mano.
+	\item salvare e caricare successivamente il proprio progetto sviluppato con \proj.
 	\end{itemize}
 	\subsection{Caratteristiche degli utenti}
 	Il prodotto \proj{} si rivolge principalmente ad una categoria di utenti ben specifica, quella dei programmatori o, in generale, dei lavoratori impiegati nell'ambito informatico con una conoscenza approfondita della programmazione.
