--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
@@ -8,7 +8,7 @@
 \supervisor{\GG, \MM}
 \uso{esterno}
 \dest{\TV, \ZU}
-\title{Piano di progetto}
+\title{Piano di Progetto}
 \date{9 gennaio 2017}
 
 \begin{document}
