--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
@@ -9,7 +9,7 @@
 \supervisor{\LB, \AZ}
 \uso{interno}
 \dest{\ALL}
-\title{Norme di progetto}
+\title{Norme di Progetto}
 \date{9 gennaio 2017}
 
 \begin{document}
