--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
@@ -118,7 +118,7 @@ Il presente documento si divide in tre sezioni principali:
 			\begin{itemize}
 				\item \textbf{O}: obbligatorio;
 				\item \textbf{D}: desiderabile;
-				\item \textbf{F}: facoltativo. %non ne abbiamo ma credo pragma esporti allo stesso modo sia per noi che per i thefellow
+				\item \textbf{F}: facoltativo. 
 			\end{itemize}
 			
 			\item[ID] identifica univocamente il requisito.
@@ -129,7 +129,7 @@ Il presente documento si divide in tre sezioni principali:
 			\item la fonte da cui deriva:
 			\begin{itemize}
 				\item Capitolato: il requisito è derivabile direttamente dalla lettura del relativo capitolato d'appalto;
-				\item Verbale: il requisito deriva a una riunione messa a verbale;
+				\item Verbale: il requisito deriva da una riunione messa a verbale;
 				\item Casi d'uso: il requisito deriva da uno o più casi d'uso identificati.
 			\end{itemize}
 		\end{itemize}
