--- a/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
+++ b/doc/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_1_0_0.tex
@@ -8,7 +8,7 @@
 \author{\ALL}
 \supervisor{\ALL}
 \uso{esterno}
-\dest{Prof. Vardanega, \ZU}
+\dest{\TV, \RC, \ZU}
 \title{Analisi dei Requisiti}
 \date{9 gennaio 2017}
 
@@ -199,9 +199,9 @@ l'attore visualizza un messaggio d'errore riguardo al file inserito(UC2.1).
 l'attore crea un nuovo progetto interagendo con l'editor in uso tramite il comando appropriato.
 \end{itemize}
 
-\subsection{UC4: Realizzazione \gloss{Diagramma Delle Classi}}
+\subsection{UC4: Realizzazione Diagramma delle Classi}
 \label{UC4}
-\myimgsmall{UC4 - Realizzazione \gloss{Diagramma delle Classi}}
+\myimgsmall{UC4 - Realizzazione Diagramma delle Classi}
 
 \begin{itemize}
 \item \textbf{Attori}: Utente;
@@ -1307,7 +1307,7 @@ Visualizzazione Errore Inserimento Commento (UC4.3.3.1);
 \end{itemize}
 \end{itemize}
 
-\subsection{UC5: Realizzazione \gloss{Diagramma delle Attività}}
+\subsection{UC5: Realizzazione Diagramma delle Attività}
 \label{UC5}
 %\myimgvsmall{UC5 - Realizzazione \gloss{Diagramma delle Attività}}
 
