--- a/doc/Esterni/Glossario/Glossario_1_0_0.tex
+++ b/doc/Esterni/Glossario/Glossario_1_0_0.tex
@@ -8,7 +8,7 @@
 \author{\ALL}
 \supervisor{\LS}
 \uso{esterno}
-\dest{\ALL, \TV, \RC, \GP}
+\dest{\TV, \RC, \GP, \ALL}
 \title{Glossario}
 \date{9 gennaio 2017}
 
