--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
@@ -271,8 +271,8 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 			\\Da sottolineare che l'utilizzo di \gloss{periodi di slack} aumenta la possibilità che la \textit{schedule variance} assuma valori positivi.
 			\\I range stabiliti per la metrica sono i seguenti:
 				\begin{itemize}
-					\item Range ottimale: $\geq{0}$;
-					\item Range di accettazione: $\geq{-10}$\%;
+					\item Range ottimale: $\geq{-10}$\%;
+					\item Range di accettazione: $\geq{-25}$\%;
 				\end{itemize}
 
 			\paragraph[Budget variance]{\hypertarget{bv}{Budget variance}}
@@ -280,8 +280,8 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 			\\Viene calcolata come la differenza fra il costo preventivato per un'attività e il costo effettivamente sostenuto per la stessa: un valore di \textit{budget variance} minore di zero indica che l'attività di progetto considerata sta richiedendo più risorse di quanto pianificato: se pari a zero indica invece che essa è perfettamente in linea con i costi previsti mentre se è addirittura strettamente positivo indica che sta procedendo con più efficienza di quanto considerato.
 			\\I range stabiliti per la metrica sono i seguenti:
 				\begin{itemize}
-					\item Range ottimale: $\geq{0}$;
-					\item Range di accettazione: $\geq{-10}$\%;
+					\item Range ottimale: $\geq{-10}$\%;
+					\item Range di accettazione: $\geq{-25}$\%;
 				\end{itemize}
 				
 			\paragraph[Produttività di codifica]{\hypertarget{pc}{Produttività di codifica}}
@@ -419,14 +419,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 				\item Range ottimale: 0-4;
 				\item Range di accettazione: 0-10;
 			\end{itemize}
-			
-			\paragraph[Numero di porzioni di codice duplicate]{\hypertarget{npcd}{Numero di porzioni di codice duplicate}}
-			Tale metrica è una misura del numero di porzioni di codice che sono presenti più volte nel programma. Una porzione di codice è considerata un duplicato non appena compare la stessa sequenza di 10 \gloss{statement}, qualsiasi sia il numero di elementi o di linee che li compongono. Un elevato numero di linee duplicate può essere segno di una programmazione non efficiente.
-			\\I range stabiliti per la metrica sono i seguenti:
-			\begin{itemize}
-				\item Range ottimale:;
-				\item Range di accettazione:;
-			\end{itemize}
+
 		\subsubsection{Manutenibilità \label{S4}}
 		Per garantire un elevato grado di manutenibilità, si è deciso di adottare un discreto numero di metriche che spaziano su diversi aspetti del programma.
 			\paragraph[Numero di statement per metodo]{\hypertarget{nsm}{Numero di statement per metodo}}
@@ -535,22 +528,22 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 				\item Range ottimale: 0-0;
 				\item Range di accettazione: 0-20;
 			\end{itemize}
-
-	\begin{table}[H]\footnotesize
+	\subsection{Riepilogo}
+	\begin{table}[H]
 	\begin{tabular}{|l|l|l|}
 	\hline
 	\textbf{Metriche} 						&\textbf{Range Accettazione} &\textbf{Range Ottimale} \\
 	\hline
 	\multicolumn{3}{|l|}{\textbf{Metriche di Processo}}\\% & \multicolumn{2}{|l|}{}
 	\hline
-	~~\hyperlink{sv}{Schedule variance} 							&$\geq{-10}$\%	&$\geq{0}$\\
-	~~\hyperlink{bv}{Budget variance} 								&$\geq{-10}$\%	&$\geq{0}$\\
-	~~\hyperlink{pc}{Produttività di codifica} 						&$\geq{10}$		&$\geq{3}$\\
+	~~\hyperlink{sv}{Schedule variance} 							&$\geq{-25}$\%	&$\geq{-10}$\%\\
+	~~\hyperlink{bv}{Budget variance} 								&$\geq{-25}$\%	&$\geq{-10}$\%\\
+	~~\hyperlink{pc}{Produttività di codifica} 						&$\geq{3}$		&$\geq{10}$\\
 	~~\hyperlink{tue}{Test di unità eseguiti}						&85-100			&100-100\\
 	~~\hyperlink{tie}{Test di integrazione eseguiti}					&55-100			&70-100\\
 	~~\hyperlink{tse}{Test di sistema eseguiti}						&70-100			&80-100\\
 	~~\hyperlink{tae}{Test di accettazione eseguiti}					&90-100			&100-100\\
-	~~\hyperlink{ig}{Indice Gulpease}								&40-100			&50-100\\
+	~~\hyperlink{ig}{Indice Gulpease}								&40-100			&60-100\\
 	~~\hyperlink{cco}{Copertura del codice}							&40-100			&60-100\\
 	\hline
 	\multicolumn{3}{|l|}{\textbf{Metriche di prodotto}}\\% & \multicolumn{2}{|l|}{}
@@ -558,13 +551,12 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 	~~\hyperlink{cro}{Copertura requisiti obbligatori}				&100-100		&100-100\\
 	~~\hyperlink{crd}{Copertura requisiti desiderabili}				&40-100			&80-100\\
 	~~\hyperlink{ts}{Test superati}									&90-100			&100-100\\
-	~~\hyperlink{pa}{Profondità annidamento}						&0-10			&0-4\\
-	~~\hyperlink{npcd}{Numero di porzioni di codice duplicate}					&-			&-\\
+	~~\hyperlink{pa}{Profondità di annidamento}						&0-10			&0-4\\
 	~~\hyperlink{nsm}{Numero di statement per metodo}				&0-50			&0-20\\
 	~~\hyperlink{npm}{Numero di parametri per metodo}				&0-10			&0-4\\
 	~~\hyperlink{ncdc}{Numero di campi dati per classe}				&0-20			&0-10\\
 	~~\hyperlink{nmc}{Numero di metodi per classe}					&0-30			&0-15\\
-	~~\hyperlink{ga}{Gradi di accoppiamento}						&0-7			&0-3\\
+	~~\hyperlink{ga}{Grado di accoppiamento}						&0-7			&0-3\\
 	~~\hyperlink{cci}{Complessità ciclomatica}						&1-15			&1-10\\
 	~~\hyperlink{lmu}{Lunghezza media di un'unità}					&100-500		&100-300\\
 	~~\hyperlink{fi}{Fan-in}										&0-20			&0-5\\
@@ -576,7 +568,7 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 	\caption{Riepilogo delle metriche e dei range di accettazione e ottimali}
 	\end{table}
 	
-
+\newpage
 \section{Test}
 	\subsection{Tipi di test}
 	Sono stati individuati quattro tipologie di test:
@@ -623,29 +615,29 @@ All'interno di questa sezione vengono riportati gli esiti delle attivit di verif
 		\NdP 					&		&~~~~~~Superato~~~~~~\\
 		\SdF 					&		&~~~~~~Superato~~~~~~\\	
 		\AdR 					&		&~~~~~~Superato~~~~~~\\
-		\PdQ 					&		&~~~~~~Superato~~~~~~\\
+		\PdP 					&		&~~~~~~Superato~~~~~~\\
 		\Glossario 				&		&~~~~~~Superato~~~~~~\\
-		\textit{Verbali} 		&		&~~~~~~Superato~~~~~~\\
+		\textit{Verbali.pdf} 		&		&~~~~~~Superato~~~~~~\\
 		\hline
 		\end{tabular}
 		\caption{Esiti del calcolo dell'indice di Gulpease dei documenti consegnati}
 		\end{table}
 		
 		\subsubsection{Verifica processo di pianificazione di progetto e processo di verifica e controllo}
-		Per verificare il soddisfacimento degli obiettivi di qualita definiti per tale procesoo, a partire dal 				consultivo redatto nel \PdP sono stati calcolati gli indici di budget variance e schedule variance per 				ogniuna delle attività previste.
+		Per verificare il soddisfacimento degli obiettivi di qualita definiti per tale processo, a partire dal 				consultivo redatto nel \PdP sono stati calcolati gli indici di budget variance e schedule variance per 				ogniuna delle attività previste.
 		\\I risultati ottenuti sono elencati nella seguente tabella:	
 		\begin{table}[H]
 		\begin{tabular}{|l|l|l|}
 		\hline
 		\textbf{Documento} 		&\textbf{Schedule variance} &\textbf{Budget variance} \\
 		\hline
-		\PdQ 					&		&\\
-		\NdP 					&		&\\
-		\SdF 					&		&\\
-		\AdR 					&		&\\
-		\PdQ 					&		&\\
-		\Glossario 				&		&\\
-		\textit{Verbali.pdf} 		&		&\\
+		\PdQ 					&0\%		&0\%\\
+		\NdP 					&0\%		&0\%\\
+		\SdF 					&0\%		&0\%\\
+		\AdR 					&0\%		&0\%\\
+		\PdP 					&-25\%		&0\%\\
+		\Glossario 				&0\%		&0\%\\
+		\textit{Verbali.pdf} 	&0\%		&0\%\\
 		\hline
 		\end{tabular}
 		\caption{Esiti del calcolo degli indici di schedule e budget variance}
