--- a/doc/Esterni/Glossario/Glossario_1_0_0.tex
+++ b/doc/Esterni/Glossario/Glossario_1_0_0.tex
@@ -6,7 +6,7 @@
 \version{1.0.0}
 \creaz{27 dicembre 2016}
 \author{\ALL}
-\supervisor{\LS}
+\supervisor{\MM}
 \uso{esterno}
 \dest{\TV, \RC, \GP, \ALL}
 \title{Glossario}
