corretta pianifica in pinaificazione

--- a/doc/Esterni/Lettera/Lettera.tex
+++ b/doc/Esterni/Lettera/Lettera.tex
@@ -28,7 +28,7 @@ via Trieste, 63\\
 
 Con la presente, il gruppo \hx{} intende comunicarLe la partecipazione al progetto didattico da Lei proposto e l'impegno alla realizzazione del prodotto \proj{} commissionato dall'azienda \ZU{} nel capitolato d'appalto C6 all'indirizzo \url{http://www.math.unipd.it/~tullio/IS-1/2016/Progetto/C6.pdf}.
 
-Si allegano i seguenti documenti, che trattano in maniera approfondita gli aspetti di pianifica, normazione, qualifica e analisi:
+Si allegano i seguenti documenti, che trattano in maniera approfondita gli aspetti di pianificazione, normazione, qualifica e analisi:
 \begin{itemize}
 	\item \SdF;
 	\item \NdP;
