--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
@@ -1,4 +1,4 @@
-% Piano di Qualifica
+%Piano di Qualifica
 % da compilare con il comando pdflatex Piano_di_Qualifica_x.x.x.tex
 
 \input{../../util/hx-ambiente}
@@ -63,7 +63,6 @@
 \section{Visione generale della strategia di gestione della qualità}
 	\subsection{Obiettivi di qualità}
 	In questa sezione vengono illustrati in modo quanto più completo ed esaustivo gli obiettivi di qualità che il gruppo intende perseguire nel corso 	dello svolgimento del progetto, opportunamente declinati nelle due sottosezioni Qualità di processo e Qualità di prodotto.
-	\\Ogni obiettivo di qualità in seguito riportato risulta associato ad un identificativo univoco in modo tale da rendere possibile un efficace 				tracciamento fra l'obiettivo di qualità da soddisfare e la metrica scelta allo scopo di verificarne il soddisfacimento.
 
 	\subsection{Qualità di processo}
 	È indubbio che la qualità di un prodotto software non possa in alcun modo prescindere dalla qualità dei diversi processi che concorrono nel definirlo e 	che anzi ne sia intrinsecamente dipendente. Con tale consapevolezza il gruppo ha scelto come riferimento per la valutazione della qualità dei propri 		processi lo standard ISO/IEC 15504 altresì conosciuto sotto l'acronimo di \gloss{SPICE}.
@@ -131,41 +130,46 @@
 		\subsubsection{Obiettivi di qualità di processo}
 		In questa sezione vengono elencati i principali processi software identificati dal team sulla base dello standard ISO/IEC 12207:2008 e per ognuno di essi gli obiettivi di qualità perseguiti.
 			\paragraph{Pianificazione di progetto e processo di verifica e controllo }
+			
 			Questo macro-processo, derivato dall'unione dei processi 6.3.1 e 6.3.2 previsti dallo standard ISO/IEC 12207:2008, ha lo scopo di pianificare le attività richieste dal progetto.
 			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
-				\subparagraph{Rispetto della pianificazione}
-				Ogni attività di un processo verrà svolta da parte di colui a cui è stata assegnata, rispettando la pianificazione temporale stabilita nel documento \PdP{} e svolgendo tutti i compiti in cui essa si articola.
-				\subparagraph{Rispetto del budget}
+				\subparagraph{Rispetto della pianificazione} 
+				Ogni attività di un processo verrà svolta da parte di colui a cui è stata assegnata, rispettando la pianificazione temporale stabilita nel documento \PdP{} e svolgendo tutti i compiti in cui essa si articola.\\(Metrica: {\hyperlink{sv}{schedule variance}}) 
+				\subparagraph{Rispetto del budget}   
 				I costi di ogni processo dovranno rientrare nel budget previsto dal documento \PdP.
-				
+				\\(Metrica: {\hyperlink{bv}{budget variance}})
 			\paragraph{Processo di costruzione del software}
 			Il processo, corrispondente al processo 7.1.5 previsto dallo standard ISO/IEC 12207:2008, definisce le attività principali volte alla produzione di unità software eseguibili che riflettano quanto identificato a livello di progettazione.
 			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
 				\subparagraph{Rispetto della produttività di codifica}
 				L'attività di codifica dovrà risultare opportunamente intensa in modo tale da garantire la produzione del sistema software nei tempi previsti.
+				\\(Metrica: {\hyperlink{pc}{produttività di codifica}}) 
 				
 			\paragraph{Processo di test per la qualifica del software/sistema}
+
 			Il macro-processo, derivante dall'unione dei processi 6.4.6 e 7.1.7 dello standard ISO/IEC 12207:2008, ha lo scopo che ogni requisito individuato sia stato implementato nel prodotto.
 			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
 				\subparagraph{Corretto funzionamento del sistema e integrazione delle componenti}
-				Le funzionalità richieste sono state integrate all'interno di un prodotto software le cui diverse componenti interagiscono fra esse in modo coerente e senza criticità, a formare un sistema coeso e funzionante.
+				Le funzionalità richieste sono state integrate all'interno di un prodotto software le cui diverse componenti interagiscono fra esse in modo coerente e senza criticità, a formare un sistema coeso e funzionante.\\(Metriche:\hyperlink{tue}{Test di unità eseguiti}, \hyperlink{tie}{Test di integrazione eseguiti}, \hyperlink{tse}{Test di sistema eseguiti}, \hyperlink{tae}{Test di accettazione eseguiti})
 			
 			\paragraph{Processo di gestione della documentazione del software}
+			
 			Il processo, corrispondente al processo 7.2.1 definito dallo standard ISO/IEC 12207:2008, ha lo scopo di produrre e gestire la documentazione relativa alle funzionalità e alle caratteristiche del sistema software prodotto.
 			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
 				\subparagraph{Leggibilità della documentazione}
-				La documentazione prodotta sarà quanto più chiara e comprensibile a tutti gli \gloss{stakeholder} coinvolti nel progetto.
+				La documentazione prodotta sarà quanto più chiara e comprensibile a tutti gli \gloss{stakeholder} coinvolti nel progetto.\\(Metrica: \hyperlink{ig}{Indice Gulpease})
 			
 			\paragraph{Processo di verifica del software}
+			
 			Il processo, corrispondente al processo 7.2.4 definito dallo standard ISO/IEC 12207:2008, ha lo scopo di verificare se qualsiasi elemento del sistema soddisfa i requisiti ad esso correlati.
 			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
 				\subparagraph{Copertura codice}
-				I test effettuati sulle diverse componenti del prodotto software andranno a considerare una gran parte delle possibili casistiche d'utilizzo e ad esplorare una notevole fetta del codice sorgente ad esso relativo.
+				I test effettuati sulle diverse componenti del prodotto software andranno a considerare una gran parte delle possibili casistiche d'utilizzo e ad esplorare una notevole fetta del codice sorgente ad esso relativo.\\(Metrica: \hyperlink{cc}{Code Coverage})
 	
 	\subsection{Qualità di prodotto}
 	Per garantire una buona qualità di prodotto, il gruppo \hx{} ha individuato dallo standard ISO/IEC 9126:2001 le qualità che ritiene di maggior importanza durante il ciclo di vita del prodotto e ha individuato gli obiettivi e le metriche coerenti con i livelli di qualità stabiliti.
@@ -262,7 +266,8 @@
 			\end{itemize}
 	
 
-		\subsubsection{Metriche per i processi}
+		\subsection{Metriche per i processi}
+		\subsubsection{Pianificazione di progetto e processo di verifica e controllo}
 			\paragraph[Schedule variance]{\hypertarget{sv}{Schedule variance}}
 			Tale metrica indica di quanto le macro-attività di progetto si discostano temporalmente rispetto alla pianificazione originaria definita nel documento \PdP . 
 			\\Viene calcolata come la
@@ -284,6 +289,9 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 					\item Range di accettazione: $\geq{-25}$\%;
 				\end{itemize}
 				
+				\subsection{Processo di costruzione del software}
+				\label{P2}
+				
 			\paragraph[Produttività di codifica]{\hypertarget{pc}{Produttività di codifica}}
 			Tale metrica indica il numero medio di linee di codice prodotto per ora/persona, ossia il numero di ore effettive impiegate nell'attività di codifica da parte dei membri del gruppo.
 			\\La misura viene effettuata nel modo seguente:
@@ -295,6 +303,9 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 					\item Range ottimale: $\geq{10}$;
 					\item Range di accettazione: $\geq{3}$;
 				\end{itemize}
+				
+				\subsection{Processo di test per la qualifica del software/sistema}
+				\label{P3}
 				
 			\paragraph[Test di unità eseguiti]{\hypertarget{tue}{Test di unità eseguiti}}
 			Tale metrica indica la percentuale di test di unità eseguiti.
@@ -343,6 +354,9 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 					\item Range ottimale: 100-100;
 					\item Range di accettazione: 90-100;
 				\end{itemize}
+			
+			\subsection{Processo di gestione della documentazione del software}
+			\label{P4}
 				
 			\paragraph[Indice di Gulpease]{\hypertarget{ig}{Indice di Gulpease}}
 			Tale metrica, tarata sulla lingua italiana, misura la qualità di un documento andando a stimarne il grado di leggibilità. Rispetto ad altri indici equivalenti per campo di applicazione ha il vantaggio di esprimere la lunghezza media delle parole in lettere anziché in sillabe --- cosa che ne consente una implementazione automatizzata fortemente affidabile. Tale indice, inoltre, considera principalmente due variabili linguistiche: la lunghezza delle parole e la lunghezza delle frasi in rapporto al numero delle lettere.
@@ -362,6 +376,9 @@ reale di fine di quell’attività: un valore di \textit{schedule variance} mino
 					\item Range ottimale: 60-100;
 					\item Range di accettazione: 40-100;
 				\end{itemize}
+				
+				\subsection{Processo di verifica del software}
+				\label{P5}
 				
 			\paragraph[Copertura del codice]{\hypertarget{cco}{Copertura del codice}}
 			Indica la percentuale di istruzioni che sono eseguite durante i test. Un'alta percentuale di istruzioni coperte dai test eseguiti comporta una maggiore probabilità che le componenti testate abbiano un ridotto numero di errori. Si può aumentare tale indice evitando di considerare i metodi che non richiedono test, come i metodi \textit{getter} e \textit{setter}.
@@ -611,13 +628,13 @@ All'interno di questa sezione vengono riportati gli esiti delle attivit di verif
 		\hline
 		\textbf{Documento} 		&\textbf{Valutazione} &\textbf{~~~~~~Esito~~~~~~} \\
 		\hline
-		\PdQ 					&		&~~~~~~Superato~~~~~~\\
-		\NdP 					&		&~~~~~~Superato~~~~~~\\
-		\SdF 					&		&~~~~~~Superato~~~~~~\\	
-		\AdR 					&		&~~~~~~Superato~~~~~~\\
-		\PdP 					&		&~~~~~~Superato~~~~~~\\
-		\Glossario 				&		&~~~~~~Superato~~~~~~\\
-		\textit{Verbali.pdf} 		&		&~~~~~~Superato~~~~~~\\
+		\PdQ 					&51		&~~~~~~Superato~~~~~~\\
+		\NdP 					&41		&~~~~~~Superato~~~~~~\\
+		\SdF 					&49		&~~~~~~Superato~~~~~~\\	
+		\AdR 					&72		&~~~~~~Superato~~~~~~\\
+		\PdP 					&55		&~~~~~~Superato~~~~~~\\
+		\Glossario 				&48		&~~~~~~Superato~~~~~~\\
+		\textit{Verbali.pdf} 		&49		&~~~~~~Superato~~~~~~\\
 		\hline
 		\end{tabular}
 		\caption{Esiti del calcolo dell'indice di Gulpease dei documenti consegnati}
