--- a/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
+++ b/doc/Interni/Norme_di_progetto/Norme_di_progetto_1_0_0.tex
@@ -129,7 +129,8 @@ Il presente documento si divide in tre sezioni principali:
 			\item la fonte da cui deriva:
 			\begin{itemize}
 				\item Capitolato: il requisito è derivabile direttamente dalla lettura del relativo capitolato d'appalto;
-				\item Verbale: il requisito deriva da una riunione messa a verbale;
+				\item Riunione Esterna: il requisito deriva da una delle riunioni esterne con il proponente;
+				\item Interno: il requisito deriva da un'analisi maggiormente approfondita del capitolato C6 da parte degli analisti;
 				\item Casi d'uso: il requisito deriva da uno o più casi d'uso identificati.
 			\end{itemize}
 		\end{itemize}
@@ -405,11 +406,8 @@ La verifica è un processo analitico che va implementato in due passi successivi
 	\paragraph{Test di sistema}
 		I test di sistema vengono eseguiti su un prodotto ritenuto completo per verificarne i requisiti. Vengono identificati dalla seguente sintassi:
 			\[TS[Codice Requisito]\]
-	\paragraph{Test di regressione}
-		Un test di regressione ha lo scopo di verificare nuovamente i componenti rieseguendo i loro test dopo che hanno subito modifiche. Vengono identificati dalla seguente sintassi:
-			\[TR[Codice Test]\]
-	\paragraph{Test di validazione}
-		I test di validazione vengono eseguiti con il proponente per collaudare il prodotto. Vengono identificati dalla seguente sintassi:
+	\paragraph{Test di accettazione}
+		I test di accettazione vengono eseguiti con il proponente per collaudare il prodotto. Vengono identificati dalla seguente sintassi:
 			\[TV[Codice Requisito]\]
 
 	\subsubsection{Strumenti}
