--- a/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
+++ b/doc/Esterni/Piano_di_qualifica/Piano_di_qualifica_1_0_0.tex
@@ -129,8 +129,7 @@
 
 		\subsubsection{Obiettivi di qualità di processo}
 		In questa sezione vengono elencati i principali processi software identificati dal team sulla base dello standard ISO/IEC 12207:2008 e per ognuno di essi gli obiettivi di qualità perseguiti.
-			\hyperlink{pppvc}{\paragraph{Pianificazione di progetto e processo di verifica e controllo}}
-			
+			\paragraph{Pianificazione di progetto e processo di verifica e controllo}
 			Questo macro-processo, derivato dall'unione dei processi 6.3.1 e 6.3.2 previsti dallo standard ISO/IEC 12207:2008, ha lo scopo di pianificare le attività richieste dal progetto.
 			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
@@ -139,7 +138,7 @@
 				\subparagraph{Rispetto del budget}   
 				I costi di ogni processo dovranno rientrare nel budget previsto dal documento \PdP.
 				
-			\hyperlink{pcs}{\paragraph{Processo di costruzione del software}}
+			\paragraph{Processo di costruzione del software}
 			Il processo, corrispondente al processo 7.1.5 previsto dallo standard ISO/IEC 12207:2008, definisce le attività principali volte alla produzione di unità software eseguibili che riflettano quanto identificato a livello di progettazione.
 			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
@@ -147,14 +146,14 @@
 				L'attività di codifica dovrà risultare opportunamente intensa in modo tale da garantire la produzione del sistema software nei tempi previsti.
 				 
 				
-			\hyperlink{ptqs}{\paragraph{Processo di test per la qualifica del software/sistema}}
+			\paragraph{Processo di test per la qualifica del software/sistema}
 
 			Il macro-processo, derivante dall'unione dei processi 6.4.6 e 7.1.7 dello standard ISO/IEC 12207:2008, ha lo scopo che ogni requisito individuato sia stato implementato nel prodotto.
 			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
 
 				\subparagraph{Corretto funzionamento del sistema e integrazione delle componenti}
 				Le funzionalità richieste sono state integrate all'interno di un prodotto software le cui diverse componenti interagiscono fra esse in modo coerente e senza criticità, a formare un sistema coeso e funzionante.
-			\hyperlink{pgds}{\paragraph{Processo di gestione della documentazione del software}}
+			\paragraph{Processo di gestione della documentazione del software}
 			
 			Il processo, corrispondente al processo 7.2.1 definito dallo standard ISO/IEC 12207:2008, ha lo scopo di produrre e gestire la documentazione relativa alle funzionalità e alle caratteristiche del sistema software prodotto.
 			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
@@ -162,7 +161,7 @@
 				\subparagraph{Leggibilità della documentazione}
 				La documentazione prodotta sarà quanto più chiara e comprensibile a tutti gli \gloss{stakeholder} coinvolti nel progetto.
 			
-			\hyperlink{pvs}{\paragraph{Processo di verifica del software}}
+			\paragraph{Processo di verifica del software}
 			
 			Il processo, corrispondente al processo 7.2.4 definito dallo standard ISO/IEC 12207:2008, ha lo scopo di verificare se qualsiasi elemento del sistema soddisfa i requisiti ad esso correlati.
 			\\Gli obiettivi di qualità stabiliti per questo processo sono i seguenti:
