pulizie di primavera

--- a/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
+++ b/doc/Esterni/Piano_di_progetto/Piano_di_progetto_1_0_0.tex
@@ -192,7 +192,8 @@ In complesso, \hx{} ritiene che il modello incrementale apporti sostanziali vant
 L'approccio sfrutta una metodologia fortemente \emph{risk-driven} che, malgrado possa portare dei benefici al prodotto finale, essa rischierebbe di appesantire eccessivamente il team, il processo di sviluppo e le risorse.
 
 
-\newpage \section{Analisi dei rischi} \label{sec:analisi}
+
+\section{Analisi dei rischi} \label{sec:analisi}
 La seguente sezione elenca e descrive i possibili rischi che possono andare ad inficiare sul lavoro del gruppo.
 La gestione dei rischi è divisa in cinque sottofasi:
 \begin{description}
@@ -337,6 +338,9 @@ Ogni rischio è caratterizzato da un elenco di informazioni che comprende:
 				\item[Analisi dei requisiti] il rischio non si è mai verificato.
 			\end{description}
 		\end{description}
+
+
+
 \section{Pianificazione delle Attività} \label{sec:pianificazione}
 Per eseguire una più accurata pianificazione progettuale, \hx{} ha deciso di suddividere il progetto nelle seguenti fasi:
 \begin{description}
@@ -497,7 +501,7 @@ Note:
 \caption{\gloss{Diagramma di Gantt} della pianificazione della fase di \VV, in giorni}
 \end{figure}
 
-\pagebreak
+
 	
 \section{Suddivisione delle ore lavorative e preventivo} \label{sec:preventivo}
 Di seguito è riportata la pianificazione di dettaglio delle attività, suddivisa nei periodi descritti precedentemente. Per ogni periodo, sono presenti una tabella e dei grafici che descrivono e rappresentano i ruoli assunti da ciascun componente, il relativo quantitativo di ore impiegato e la rispettiva retribuzione.
@@ -1253,7 +1257,8 @@ Il costo totale del progetto {\proj} preventivato è arrotondato a \textbf{12000
   \caption{Costo totale per il progetto {\proj} per ruolo e per persona, valori in euro (\euro).}
 \end{figure}
 
-\pagebreak
+
+
 \section{Consuntivo di periodo} \label{sec:consuntivo}
 In questa sezione sono indicate le spese affrontate a termine di ogni \gloss{milestone} interna. Queste andranno a sommarsi per infine stilare il consuntivo finale.
 
@@ -1360,7 +1365,8 @@ Questo ha portato un ritardo complessivo pari a 3 giorni rispetto alla \gloss{ba
 \subsubsection{Preventivo a finire}
 Siccome non sono state rilevate variazioni nei costi, il preventivo a finire (a carico del cliente) è pari a quelle riportate nella sezione \ref{sec:orerend} \nameref{sec:orerend}.
 
-\pagebreak
+
+
 \section{Organigramma}	\label{sec:organigramma}
 \subsection{Redazione}
 
