--- a/doc/util/hx-ambiente.tex
+++ b/doc/util/hx-ambiente.tex
@@ -2,7 +2,6 @@
 % da usare tramite il comando \input{../../util/hx-ambiente}
 
 \documentclass[a4paper,titlepage]{article}
-% \usepackage{accanthis} % scegliere il font da http://www.tug.dk/FontCatalogue/
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage[english,italian]{babel}
@@ -23,19 +22,30 @@
 \usepackage{../../util/hx-macro}
 \usepackage{../../util/hx-front}
 
+% solo se si vuole una nuova pagina ad ogni \section:
+\usepackage{titlesec}
+\newcommand{\sectionbreak}{\clearpage}
+
+% stile di pagina:
 \pagestyle{fancy}
-% elimina indentazione paragrafo:
+
+% solo se si vuole eliminare l'indentazione ad ogni paragrafo:
 \setlength{\parindent}{0pt}
+
 % intestazione:
 \lhead{\Large{\proj}}
 \rhead{\includegraphics[keepaspectratio=true,width=50px]{../../util/hivex_logo2.png}}
 \renewcommand{\headrulewidth}{0.4pt}
+
 % pie' di pagina:
 \lfoot{\email}
 \rfoot{\thepage}
 \cfoot{}
 \renewcommand{\footrulewidth}{0.4pt}
 
+% spazio verticale tra le celle di una tabella:
 \renewcommand{\arraystretch}{1.5}
+
+% profondità di indicizzazione:
 \setcounter{tocdepth}{4}
 \setcounter{secnumdepth}{4}
